--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,8 @@
 APP_ENV=prod
 REDIS_HOST=redis-priv.prod.schoolcontrol.io
+MONGO_HOST=mongodb-priv.prod.schoolcontrol.io
+MONGO_DATABASE=realtime
 API_USER=robot@schoolcontrol.com
 API_PASSWORD=Heldjnf$ck3
+APP_PORT=3000
+API_URL=https://api.app.schoolcontrol.com
