support disconnect socket by invalid source

--- a/.env.prod
+++ b/.env.prod
@@ -6,3 +6,4 @@ API_USER=robot@schoolcontrol.com
 API_PASSWORD=Heldjnf$ck3
 APP_PORT=3000
 API_URL=https://api.app.schoolcontrol.com
+SOURCE_VALID="pwa,tw,pa,ta"
