--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 APP_ENV=local
 REDIS_HOST=redis
+MONGO_HOST=mongo
+MONGO_DATABASE=realtime
 API_USER=robot@schoolcontrol.com
 API_PASSWORD=Heldjnf$ck3
+APP_PORT=3000
+API_URL=http://api.app.dev.schoolcontrol.com
+SOURCE_VALID="pwa,tw,pa,ta"
