--- a/.env.stage
+++ b/.env.stage
@@ -6,3 +6,4 @@ API_USER=schedule
 API_PASSWORD=Heldjnf$ck3
 APP_PORT=3000
 API_URL=https://api.app.stage.schoolcontrol.com
+SOURCE_VALID="pwa,tw,pa,ta"
