--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 APP_ENV=prod
-REDIS_HOST=redis-priv.prod.schoolcontrol.io
-MONGO_HOST=mongodb-priv.prod.schoolcontrol.io
+REDIS_HOST=ip-172-31-38-88.ec2.internal
+MONGO_HOST=ip-172-31-89-252.ec2.internal
 MONGO_DATABASE=realtime
 API_USER=robot@schoolcontrol.com
 API_PASSWORD=Heldjnf$ck3
